--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			<div class="container">
 				<div class="partner-wrap">
 					<div class="wrap">
-						<div class="partner animate-box">
+						<div class="arvind madhav">
 							<div class="inner">
 								<img class="img-responsive" src="images/logo-1.png" alt="">
 							</div>
