--- a/index.html
+++ b/index.html
@@ -194,8 +194,13 @@
 							</div>
 							<div class="col-md-6 col-md-pull-6 animate-box">
 								<div class="desc desc2">
-									<h3><a href="#">A Cube of Ice</a></h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									
+<h3><a href="#">A Cube of Ice and Fire </a></h3>
+									
+<p>Far far away, behind the word mountains, far from the countries 
+Vokalia and Consonantia, there live the blind texts. Separated they live 
+in Bookmarksgrove right at the coast of the Semantics, a large language 
+si the  ocean.</p>
 									<p><a class="btn btn-primary" href="#">Learn More</a></p>
 								</div>
 							</div>
