--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 		</div>
 		<!-- end:header-top -->
-		<div id="fh5co-partner">
+		<div id="ashinrobert">
 			<div class="container">
 				<div class="partner-wrap">
 					<div class="wrap">
