--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							<div class="col-md-6 animate-box">
 								<div class="desc">
 									<h3><a href="#">Guitar Music</a></h3>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>okay</p>
 									<p><a class="btn btn-primary" href="#">Read More</a></p>
 								</div>
 							</div>
