--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- 
 	//////////////////////////////////////////////////////
 
-	paid HTML5 TEMPLATE 
+	paid HTML5 TEMPLATE here
 	DESIGNED & DEVELOPED by paidHTML5.CO
 		
 	Website: 		http://paidhtml5.co/
